# tiy

./: ClassLinuxKeyboard.md  ClassMulticastClient.md  ClassOpenCVStereoCamera.md  ClassStereoCamera.md  ClassWindowsKeyboard.md  InstallationOnWindows.md  ProjectHome.md  README.md  TrackItYourself.md
src/: CMakeLists.txt  Findaravis.cmake  Findinterception.cmake  Findtiy.cmake  LICENCE.txt  README.txt  client.cpp  config_camera.xml  config_object.xml  config_run_parameters.xml  server.cpp  tiy.h  video_left.avi  video_right.avi
src/inputDevice/: KeyboardDevice.cpp  KeyboardDevice.h  MouseDevice.cpp  MouseDevice.h
src/inputDevice/unix/: LinuxDevice_README.txt  LinuxKeyboard.cpp  LinuxKeyboard.h  LinuxMouse.cpp  LinuxMouse.h
src/inputDevice/win/: WindowsKeyboard.cpp  WindowsKeyboard.h  WindowsMouse.cpp  WindowsMouse.h
src/markerTracking/: MarkerTracking.cpp  MarkerTracking.h
src/multicastClient/: MulticastClient.cpp  MulticastClient.h
src/multicastServer/: MulticastServer.cpp  MulticastServer.h
src/stereoCam/: OpenCVStereoCamera.cpp  OpenCVStereoCamera.h  StereoCamera.cpp  StereoCamera.h
src/stereoCam/unix/: BaslerGigEStereoCamera.cpp  BaslerGigEStereoCamera.h
wiki/: CameraSetUp.md  ClassBaslerGigEStereoCamera.md  ClassKeyboardDevice.md  ClassLinuxKeyboard.md  ClassLinuxMouse.md  ClassMarkerTracking.md  ClassMouseDevice.md  ClassMulticastClient.md  ClassMulticastServer.md  ClassOpenCVStereoCamera.md  ClassStereoCamera.md  ClassWindowsKeyboard.md  ClassWindowsMouse.md  IncludeLibrary.md  InstallationOnLinux.md  InstallationOnWindows.md  ObjectSetUp.md  TrackItYourself.md
